# Aspen-Grades-Scraper

./: README.md  grabGrades.py  main.py  pyproject.toml
templates/: results.html  wrong.html
